Bug 1611610 - Don't increase glyph advance for synthetic bold if the glyph is zero-width. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D61065